--- a/app/src/main/res/layout/fragment_invoice_list.xml
+++ b/app/src/main/res/layout/fragment_invoice_list.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/invoice_list"
+        android:id="@+id/gantry_list"
         android:name="se.ju.agileandroidproject.InvoiceFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
