--- a/app/src/main/res/layout/gantry_list_item.xml
+++ b/app/src/main/res/layout/gantry_list_item.xml
@@ -3,7 +3,11 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="wrap_content" android:id="@+id/invoice_list_item_viewHolder">
+                                             android:layout_height="wrap_content"
+                                             android:id="@+id/invoice_list_item_viewHolder"
+                                             android:background="@android:drawable/dialog_holo_light_frame"
+                                             android:backgroundTint="#FFFFFF"
+                                             android:backgroundTintMode="multiply">
 
     <android.support.constraint.ConstraintLayout
             android:layout_width="wrap_content"
@@ -13,67 +17,55 @@
             android:layout_marginStart="16dp">
 
         <TextView
-                android:text="Coordinate: "
+                android:text="Coordinates: "
                 android:layout_width="wrap_content"
                 android:layout_height="17dp" android:id="@+id/textView"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"/>
+                android:layout_marginStart="4dp"
+                tools:layout_editor_absoluteY="4dp"/>
+        <TextView
+                android:text="AAAAAAAAAAAA"
+                android:layout_width="wrap_content"
+                android:layout_height="17dp" android:id="@+id/gantry_id"
+                app:layout_constraintStart_toEndOf="@+id/textView2"
+                android:layout_marginStart="28dp" app:layout_constraintTop_toBottomOf="@+id/gantry_coordinate"/>
         <TextView
                 android:text="XX Coordinate XX"
                 android:layout_width="wrap_content"
-                android:layout_height="15dp" android:id="@+id/gantry_coordinate"
+                android:layout_height="17dp" android:id="@+id/gantry_coordinate"
                 app:layout_constraintStart_toEndOf="@+id/textView"
-                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                tools:layout_editor_absoluteY="4dp" android:layout_marginStart="4dp"/>
+        <TextView
+                android:text="Gantry ID:"
+                android:layout_width="wrap_content"
+                android:layout_height="17dp" android:id="@+id/textView2"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="4dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView"/>
     </android.support.constraint.ConstraintLayout>
     <android.support.constraint.ConstraintLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp">
 
         <TextView
-                android:text="Time: "
-                android:layout_width="wrap_content"
-                android:layout_height="17dp" android:id="@+id/textView3"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="8dp"/>
-        <TextView
                 android:text="XX TIME XX"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/gantry_time" app:layout_constraintStart_toEndOf="@+id/textView3"
-                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                android:id="@+id/gantry_time"
+                android:layout_marginStart="4dp"
+                app:layout_constraintStart_toStartOf="parent" android:textSize="18sp"/>
     </android.support.constraint.ConstraintLayout>
     <TextView
-            android:text="kr"
+            android:text="30 kr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView6"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="36dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-    <TextView
-            android:text="30"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/gantry_fee" app:layout_constraintEnd_toStartOf="@+id/textView6"
-            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
-    <TextView
-            android:text="Fee: "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView2"
+            android:id="@+id/gantry_fee"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/gantry_fee" android:layout_marginEnd="8dp"/>
+            android:textSize="36sp" app:layout_constraintVertical_bias="0.512" android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
 </android.support.constraint.ConstraintLayout>
