--- a/app/src/main/res/layout/invoice_list_item.xml
+++ b/app/src/main/res/layout/invoice_list_item.xml
@@ -3,7 +3,11 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="wrap_content" android:id="@+id/invoice_list_item_viewHolder">
+                                             android:layout_height="wrap_content"
+                                             android:id="@+id/invoice_list_item_viewHolder"
+                                             android:background="@android:drawable/dialog_holo_light_frame"
+                                             android:foregroundTint="#00F00606"
+                                             android:backgroundTintMode="multiply">
 
     <android.support.constraint.ConstraintLayout
             android:layout_width="wrap_content"
@@ -13,59 +17,61 @@
             android:layout_marginStart="16dp">
 
         <TextView
-                android:text="Created: "
+                android:text="Issued at:"
                 android:layout_width="wrap_content"
                 android:layout_height="17dp" android:id="@+id/textView"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"/>
+                android:layout_marginStart="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/textView3" app:layout_constraintVertical_bias="0.307"/>
         <TextView
                 android:text="A date"
                 android:layout_width="wrap_content"
-                android:layout_height="15dp" android:id="@+id/invoice_listitem_date"
+                android:layout_height="17dp" android:id="@+id/invoice_listitem_date"
                 app:layout_constraintStart_toEndOf="@+id/textView"
-                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-    </android.support.constraint.ConstraintLayout>
-    <android.support.constraint.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp">
-
+                android:layout_marginStart="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/invoice_listitem_due_date"
+                app:layout_constraintTop_toTopOf="parent"/>
         <TextView
-                android:text="Due date: "
-                android:layout_width="wrap_content"
+                android:text="Due: "
+                android:layout_width="60dp"
                 android:layout_height="17dp" android:id="@+id/textView3"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="8dp"/>
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/invoice_list_item_viewHolder"/>
         <TextView
                 android:text="The due date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/invoice_listitem_due_date" app:layout_constraintStart_toEndOf="@+id/textView3"
-                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                android:id="@+id/invoice_listitem_due_date"
+                app:layout_constraintStart_toEndOf="@+id/textView3"
+                android:layout_marginStart="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/invoice_list_item_viewHolder"/>
     </android.support.constraint.ConstraintLayout>
     <TextView
-            android:text="Kr"
+            android:text="30 kr"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView6"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="36dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_height="49dp"
+            android:id="@+id/invoice_listitem_cost"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="36sp" android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
     <TextView
-            android:text="30"
+            android:text="Status:"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/invoice_listitem_cost" app:layout_constraintEnd_toStartOf="@+id/textView6"
-            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_height="19dp"
+            android:id="@+id/textView4" android:layout_marginEnd="8dp"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/invoice_listitem_cost"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toStartOf="@+id/paid_status"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="19dp"
+            android:id="@+id/paid_status" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/invoice_listitem_cost"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.00999999"/>
 </android.support.constraint.ConstraintLayout>
