--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -27,13 +27,6 @@
             android:textColor="@color/KapschOrange"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             android:text="@string/nav_username"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
-
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/KapschOrange"
-            android:text="@string/nav_email"
-            android:id="@+id/textView"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:id="@+id/nav_username"/>
 
 </LinearLayout>
