--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,11 +14,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="-100dp"
             android:orientation="horizontal">
-        <android.support.v7.widget.AppCompatImageView
-                android:layout_marginLeft="130dp"
-                android:layout_width="130dp"
-                android:layout_height="44dp"
-                android:background="@drawable/kapscharrow"/>
+        <ImageView
+                android:src="@drawable/kapscharrow"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:id="@+id/imageView2"
+                android:layout_weight="1"/>
     </LinearLayout>
 
     <LinearLayout
