--- a/app/src/main/res/layout/fragment_start_travel.xml
+++ b/app/src/main/res/layout/fragment_start_travel.xml
@@ -8,13 +8,14 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="240dp"
+            android:layout_marginTop="190dp"
             android:orientation="horizontal">
-        <android.support.v7.widget.AppCompatImageView
-                android:layout_marginLeft="140dp"
-                android:layout_width="130dp"
-                android:layout_height="44dp"
-                android:background="@drawable/kapscharrow"/>
+        <ImageView
+                android:src="@drawable/kapscharrow"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:id="@+id/imageView4"
+                android:layout_weight="1"/>
     </LinearLayout>
 
     <LinearLayout
