--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -14,12 +14,10 @@
         android:gravity="bottom">
 
     <ImageView
-            android:layout_width="100dp"
-            android:layout_height="37dp"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:background="@drawable/kapscharrowoutline"
-            android:contentDescription="@string/nav_header_desc"
-            android:id="@+id/imageView"/>
+            android:layout_width="match_parent"
+            android:layout_height="80dp" app:srcCompat="@drawable/kapscharrowoutline"
+            android:id="@+id/imageView7" android:layout_weight="1"
+            android:scaleType="fitStart" android:layout_marginTop="40dp"/>
 
     <TextView
             android:layout_width="match_parent"
