--- a/app/src/main/res/layout/gantry_list_item.xml
+++ b/app/src/main/res/layout/gantry_list_item.xml
@@ -22,7 +22,7 @@
                 android:layout_height="17dp" android:id="@+id/textView"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="4dp"
-                tools:layout_editor_absoluteY="4dp"/>
+                app:layout_constraintTop_toTopOf="parent"/>
         <TextView
                 android:text="AAAAAAAAAAAA"
                 android:layout_width="wrap_content"
@@ -34,7 +34,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="17dp" android:id="@+id/gantry_coordinate"
                 app:layout_constraintStart_toEndOf="@+id/textView"
-                tools:layout_editor_absoluteY="4dp" android:layout_marginStart="4dp"/>
+                android:layout_marginStart="4dp" app:layout_constraintTop_toTopOf="parent"
+        />
         <TextView
                 android:text="Gantry ID:"
                 android:layout_width="wrap_content"
@@ -57,7 +58,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/gantry_time"
                 android:layout_marginStart="4dp"
-                app:layout_constraintStart_toStartOf="parent" android:textSize="18sp"/>
+                app:layout_constraintStart_toStartOf="parent" android:textSize="18sp"
+                app:layout_constraintTop_toTopOf="parent"/>
     </android.support.constraint.ConstraintLayout>
     <TextView
             android:text="30 kr"
