--- a/app/src/main/res/layout/invoice_list_item.xml
+++ b/app/src/main/res/layout/invoice_list_item.xml
@@ -19,26 +19,25 @@
         <TextView
                 android:text="Issued at:"
                 android:layout_width="wrap_content"
-                android:layout_height="17dp" android:id="@+id/textView"
+                android:layout_height="wrap_content" android:id="@+id/textView"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/textView3" app:layout_constraintVertical_bias="0.307"/>
+        />
         <TextView
                 android:text="A date"
                 android:layout_width="wrap_content"
-                android:layout_height="17dp" android:id="@+id/invoice_listitem_date"
+                android:layout_height="wrap_content" android:id="@+id/invoice_listitem_date"
                 app:layout_constraintStart_toEndOf="@+id/textView"
                 android:layout_marginStart="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/invoice_listitem_due_date"
                 app:layout_constraintTop_toTopOf="parent"/>
         <TextView
                 android:text="Due: "
-                android:layout_width="60dp"
-                android:layout_height="17dp" android:id="@+id/textView3"
-                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="61dp"
+                android:layout_height="wrap_content" android:id="@+id/textView3"
+                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/invoice_list_item_viewHolder"/>
+                app:layout_constraintTop_toBottomOf="@+id/textView"/>
         <TextView
                 android:text="The due date"
                 android:layout_width="wrap_content"
@@ -46,8 +45,7 @@
                 android:id="@+id/invoice_listitem_due_date"
                 app:layout_constraintStart_toEndOf="@+id/textView3"
                 android:layout_marginStart="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/invoice_list_item_viewHolder"/>
+                app:layout_constraintTop_toBottomOf="@+id/invoice_listitem_date"/>
     </android.support.constraint.ConstraintLayout>
     <TextView
             android:text="30 kr"
