--- a/app/src/main/res/layout/gantry_list_item.xml
+++ b/app/src/main/res/layout/gantry_list_item.xml
@@ -19,27 +19,27 @@
         <TextView
                 android:text="Coordinates: "
                 android:layout_width="wrap_content"
-                android:layout_height="17dp" android:id="@+id/textView"
+                android:layout_height="wrap_content" android:id="@+id/textView"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="4dp"
                 app:layout_constraintTop_toTopOf="parent"/>
         <TextView
                 android:text="AAAAAAAAAAAA"
                 android:layout_width="wrap_content"
-                android:layout_height="17dp" android:id="@+id/gantry_id"
+                android:layout_height="wrap_content" android:id="@+id/gantry_id"
                 app:layout_constraintStart_toEndOf="@+id/textView2"
-                android:layout_marginStart="28dp" app:layout_constraintTop_toBottomOf="@+id/gantry_coordinate"/>
+                android:layout_marginStart="27dp" app:layout_constraintTop_toBottomOf="@+id/gantry_coordinate"/>
         <TextView
                 android:text="XX Coordinate XX"
                 android:layout_width="wrap_content"
-                android:layout_height="17dp" android:id="@+id/gantry_coordinate"
+                android:layout_height="wrap_content" android:id="@+id/gantry_coordinate"
                 app:layout_constraintStart_toEndOf="@+id/textView"
                 android:layout_marginStart="4dp" app:layout_constraintTop_toTopOf="parent"
         />
         <TextView
                 android:text="Gantry ID:"
                 android:layout_width="wrap_content"
-                android:layout_height="17dp" android:id="@+id/textView2"
+                android:layout_height="wrap_content" android:id="@+id/textView2"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="4dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView"/>
