--- a/app/src/main/res/layout/fragment_gantry_list.xml
+++ b/app/src/main/res/layout/fragment_gantry_list.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" android:id="@+id/no_invoices_message"
         android:gravity="center" android:visibility="gone"/>
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/gantry_list"
         android:name="se.ju.agileandroidproject.GantryFragment"
         android:layout_width="match_parent"
