--- a/app/src/main/res/layout/gantry_list_item.xml
+++ b/app/src/main/res/layout/gantry_list_item.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="wrap_content"
-                                             android:id="@+id/invoice_list_item_viewHolder"
-                                             android:background="@android:drawable/dialog_holo_light_frame"
-                                             android:backgroundTint="#FFFFFF"
-                                             android:backgroundTintMode="multiply">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="wrap_content"
+                                                   android:id="@+id/invoice_list_item_viewHolder"
+                                                   android:background="@android:drawable/dialog_holo_light_frame"
+                                                   android:backgroundTint="#FFFFFF"
+                                                   android:backgroundTintMode="multiply">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
@@ -43,8 +43,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="4dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView"/>
-    </android.support.constraint.ConstraintLayout>
-    <android.support.constraint.ConstraintLayout
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="24dp"
             android:layout_marginTop="4dp"
@@ -60,7 +60,7 @@
                 android:layout_marginStart="4dp"
                 app:layout_constraintStart_toStartOf="parent" android:textSize="18sp"
                 app:layout_constraintTop_toTopOf="parent"/>
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView
             android:text="30 kr"
             android:layout_width="wrap_content"
@@ -70,4 +70,4 @@
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:textSize="36sp" app:layout_constraintVertical_bias="0.512" android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
