--- a/app/src/main/res/layout/invoice_list_item.xml
+++ b/app/src/main/res/layout/invoice_list_item.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="wrap_content"
-                                             android:id="@+id/invoice_list_item_viewHolder"
-                                             android:background="@android:drawable/dialog_holo_light_frame"
-                                             android:foregroundTint="#00F00606"
-                                             android:backgroundTintMode="multiply">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="wrap_content"
+                                                   android:id="@+id/invoice_list_item_viewHolder"
+                                                   android:background="@android:drawable/dialog_holo_light_frame"
+                                                   android:foregroundTint="#00F00606"
+                                                   android:backgroundTintMode="multiply">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
@@ -46,7 +46,7 @@
                 app:layout_constraintStart_toEndOf="@+id/textView3"
                 android:layout_marginStart="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/invoice_listitem_date"/>
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView
             android:text="30 kr"
             android:layout_width="wrap_content"
@@ -72,4 +72,4 @@
             android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/invoice_listitem_cost"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintVertical_bias="0.00999999"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
