--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -55,7 +55,7 @@
                         android:layout_marginLeft="62dp"
                         android:layout_marginTop="10dp"
                         android:textSize="17dp"
-                        android:text="Cordinates: "
+                        android:text="Coordinates: "
                         android:textStyle="italic"
                         android:layout_weight="1"/>
 
