--- a/app/src/main/res/layout/fragment_default_travel.xml
+++ b/app/src/main/res/layout/fragment_default_travel.xml
@@ -65,7 +65,7 @@
                         android:textColor="#000000"
                         android:layout_height="match_parent"
                         android:textSize="17dp"
-                        android:text="Cordinates: "
+                        android:text="Coordinates: "
                         android:textStyle="italic" android:layout_marginLeft="62dp" android:layout_marginTop="10dp"/>
 
                 <TextView
